GNOME Bugzilla – Bug 644531
evolution plugin crashes
Last modified: 2012-04-11 10:56:02 UTC
Starting program: /usr/bin/nautilus-sendto ~/Videos/TSS82.mp3 [Thread debugging using libthread_db enabled] [New Thread 0x7ffff16ec700 (LWP 301)] [New Thread 0x7ffff0881700 (LWP 302)] Init gajim plugin warning: the debug information found in "/usr/lib/debug//usr/lib64/libgeoclue.so.0.0.0.debug" does not match "/usr/lib64/libgeoclue.so.0" (CRC mismatch). warning: the debug information found in "/usr/lib/debug/usr/lib64/libgeoclue.so.0.0.0.debug" does not match "/usr/lib64/libgeoclue.so.0" (CRC mismatch). Init empathy plugin Init nautilus burn plugin Init pidgin plugin Init evolution plugin Init removable-devices plugin (nautilus-sendto:32766): Gtk-WARNING **: Unknown property: GtkDialog.has-separator (nautilus-sendto:32766): libebook-WARNING **: e-book.c:3256: cannot get book from factory: GDBus.Error:org.freedesktop.DBus.Error.NoReply: Message did not receive a reply (timeout by message bus) ** (nautilus-sendto:32766): WARNING **: GDBus.Error:org.freedesktop.DBus.Error.NoReply: Message did not receive a reply (timeout by message bus) (nautilus-sendto:32766): libebook-WARNING **: e-book.c:3256: cannot get book from factory: GDBus.Error:org.freedesktop.DBus.Error.ServiceUnknown: The name :1.832 was not provided by any .service files (nautilus-sendto:32766): GLib-WARNING **: GError set over the top of a previous GError or uninitialized memory. This indicates a bug in someone's code. You must ensure an error is NULL before it's set. The overwriting error message was: GDBus.Error:org.freedesktop.DBus.Error.ServiceUnknown: The name :1.832 was not provided by any .service files ** (nautilus-sendto:32766): WARNING **: (null) GSlice: MemChecker: attempt to release non-allocated block: 0x9b1000 size=16 Program received signal SIGABRT, Aborted. 0x000000342e4362c5 in raise (sig=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64 64 return INLINE_SYSCALL (tgkill, 3, pid, selftid, sig); Missing separate debuginfos, use: debuginfo-install NetworkManager-glib-0.8.2-8.git20101117.fc15.x86_64 geoclue-0.12.0-3.fc15.x86_64 gnutls-2.10.5-1.fc15.x86_64 libXt-1.1.0-1.fc15.x86_64 libicu-4.4.2-7.fc15.x86_64 libjpeg-turbo-1.1.0-1.fc15.x86_64 libogg-1.2.2-3.fc15.x86_64 libtasn1-2.7-2.fc15.x86_64 libtool-ltdl-2.4-4.fc15.x86_64 libvorbis-1.3.2-1.fc15.x86_64 libxslt-1.1.26-7.fc15.x86_64 nss-softokn-freebl-3.12.9-7.fc15.x86_64 (gdb) bt
+ Trace 226275
nautilus-sendto-2.91.6-1.fc15.x86_64 evolution-2.91.91-1.fc15.x86_64
This crash is triggered by the e-d-s crash in bug 644532.
Created attachment 183324 [details] [review] proposed nst patch for nautilus-sendto; This is fixing this crash. It was because the 'error' variable was set in the first call to e_book_new(), then it was freed, but not reset to NULL, so another call to e_book_new() failed again, but it wasn't updating the 'error' so the next call of g_error_free was on an already freed memory. All the other changes are to adapt nautilus-sendto to API changes in EBook and to fix few other minor compiler warnings and code-logic changes.
commit 119d3ed1850f61f15e2a64aed468041fe747861a Author: Milan Crha <mcrha@redhat.com> Date: Wed Apr 11 11:54:42 2012 +0100 evolution: Fix possible double-free crash Due to error handling. https://bugzilla.gnome.org/show_bug.cgi?id=644531 commit d382093aac2abadc0bf08932a1cb9d80a2ff44f2 Author: Milan Crha <mcrha@redhat.com> Date: Wed Apr 11 11:54:24 2012 +0100 evolution: Fix addressbook source handling commit e8bcc2882c34a585fc5be7e4cbb761c2b1d5998d Author: Milan Crha <mcrha@redhat.com> Date: Wed Apr 11 11:53:28 2012 +0100 evolution: Fix view-completed signal handling commit 3eb262a424e797730ec3393a9489e0e6eafcc8b5 Author: Milan Crha <mcrha@redhat.com> Date: Wed Apr 11 11:51:58 2012 +0100 evolution: Fix double assignment