evolution: Fix possible double-free crash

Due to error handling.

https://bugzilla.gnome.org/show_bug.cgi?id=644531